# splat.ai

./: .pnp.cjs  LICENSE  README.md  index.html  package-lock.json  package.json  preferences.html  tailwind.config.js  vite.config.ts
.github/workflows/: publish.yml  release.yml
assets/: README.md  app-icon.xcf  logo.html  macos_icon_generator.py
src/: App.css  App.tsx  preferences.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns  macos_icon_generator.py
src-tauri/src/: chat.rs  lib.rs  llm.rs  main.rs
src-tauri/src/tools/: find.rs
src/components/: ChatMessage.tsx  CodeBlock.tsx  ConversationsMenu.tsx  ScrollContainer.tsx  Toolbar.tsx
src/components/ui/: sidebar.tsx
src/elements/: AttachmentViewer.tsx  ChatMessage.tsx  CodeBlock.css  CodeBlock.tsx  ConversationsMenu.tsx  FileAttachment.tsx  ImageAttachment.tsx  ImageViewer.tsx  InputArea.tsx  ProjectSettings.tsx  ScrollContainer.tsx  SearchBox.tsx  Toolbar.tsx
src/elements/markdown/: remarkExtractThink.ts  transformMarkdownMath.ts
src/hooks/: useApi.ts  useCommandN.ts  useGlobalShortcut.tsx
src/lib/: inputHelpers.ts  logging.ts  ollamaApi.ts  tools.ts  updater.ts  utils.ts
src/screens/: Home.tsx  Settings.tsx
src/store/: broadcastMiddleware.ts  conversationStore.ts  projectStore.ts  settingsStore.ts  tauriStoreAdapter.ts
